# stella-typecheker

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml
cmake/antlr4/: ExternalAntlr4Cpp.cmake  README.md
cmake/toolchains/: clang-libc++.cmake
stella-examples/: functions_confict.stella  name_shadowing.stella  simple.stella
stella-examples/error/: error_unexpected_type_for_parameter.stella  test_err_duplicate_function.stella  test_err_missing_main.stella  test_err_natrec_wrong_s.stella  test_err_natrec_wrong_z.stella  test_err_not_a_function.stella  test_err_succ_on_bool.stella  test_err_type_mismatch_if.stella
stella-examples/ok/: test_ok_function_call.stella  test_ok_natrec.stella  test_ok_succ_iszero.stella
tests/: README.md  golden_tester.py
tests/golden/: error_unexpected_type_for_parameter.golden  functions_confict.golden
typechecker/: CMakeLists.txt
typechecker/ast/: CMakeLists.txt
typechecker/ast/include/stella/: ast.hpp  ast_fwd.hpp  base.hpp  fun.hpp  logic.hpp  nat.hpp  utils.hpp  var.hpp  visitor.hpp
typechecker/ast/include/stella/ast/: asc.hpp  ast.hpp  ast_fwd.hpp  attribute_storage.hpp  base.hpp  fun.hpp  let.hpp  list.hpp  logic.hpp  match.hpp  nat.hpp  record.hpp  sum.hpp  tuple.hpp  unit.hpp  var.hpp  variant.hpp  visitor.hpp
typechecker/ast/src/: asc.cpp  base.cpp  fun.cpp  let.cpp  list.cpp  logic.cpp  match.cpp  nat.cpp  record.cpp  sum.cpp  tuple.cpp  variant.cpp  visitor.cpp
typechecker/ast/tests/: CMakeLists.txt  attribute_storage_test.cpp
typechecker/checker/: CMakeLists.txt
typechecker/checker/include/stella/typecheck/: check.hpp  error.hpp  expected_type.hpp  name_context.hpp  type_checker.hpp
typechecker/checker/src/: check.cpp  error.cpp  expected_type.cpp  name_context.cpp  type_checker.cpp  type_checker_asc.cpp  type_checker_bool.cpp  type_checker_fun.cpp  type_checker_let.cpp  type_checker_list.cpp  type_checker_match.cpp  type_checker_nat.cpp  type_checker_record.cpp  type_checker_sum.cpp  type_checker_tuple.cpp  type_checker_unit.cpp  type_checker_var.cpp  type_checker_variant.cpp
typechecker/checker/tests/: CMakeLists.txt  expected_type_test.cpp
typechecker/cli/: CMakeLists.txt
(+190 files in other folders)
